--- a/assets/css/Law.css
+++ b/assets/css/Law.css
@@ -88,3 +88,15 @@
     font-weight: 400;
     font-size: 16px;
 }
+
+.fw_form_fw_form .field-text input:active,
+.fw_form_fw_form .field-text input:focus,
+.fw_form_fw_form .field-textarea textarea:active,
+.fw_form_fw_form .field-textarea textarea:focus {
+    outline: none;
+    box-shadow: none;
+    border-color: #f95959;
+}
+.fw_form_fw_form .wrap-forms label {
+    display: none;
+}
