--- a/assets/css/Law.css
+++ b/assets/css/Law.css
@@ -27,6 +27,7 @@
 }
 
 #fh5co-practice .fh5co-heading,
+#fh5co-about .fh5co-heading,
 #fh5co-blog .fh5co-heading {
     padding: 0 16%;
 }
@@ -107,4 +108,16 @@
 
 a.btn.btn-primary:visited {
     color: #ffffff;
+}
+
+.fw-team-name .fw-team-inner .fw-primary-name > span {
+    font-size: 16px;
+}
+
+#fh5co-about .fw-icon i {
+    font-size: 20px;
+    color: #f95959;
+}
+#fh5co-about .fw-icon {
+    padding: 0 10px;
 }
