--- a/assets/css/Law.css
+++ b/assets/css/Law.css
@@ -3,6 +3,7 @@
  */
 #home-slider > .fw-container-fluid,
 #fh5co-consult > .fw-container-fluid,
+#law-map > .fw-container-fluid,
 #fh5co-content > .fw-container-fluid{
     padding: 0;
 }
