--- a/assets/css/Law.css
+++ b/assets/css/Law.css
@@ -143,3 +143,36 @@ a.btn.btn-primary:visited {
 .p-0 {
     padding: 0;
 }
+
+/* Block: Widget Latest Comments ------------- */
+
+.entry-content .wp-block-latest-comments li {
+    margin: 2rem 0;
+}
+
+.has-avatars .wp-block-latest-comments__comment .wp-block-latest-comments__comment-excerpt,
+.has-avatars .wp-block-latest-comments__comment .wp-block-latest-comments__comment-meta {
+    margin-left: 5.5rem;
+}
+
+.entry-content .wp-block-latest-comments a {
+    text-decoration: none;
+}
+
+.entry-content .wp-block-latest-comments a:hover,
+.entry-content .wp-block-latest-comments a:focus {
+    text-decoration: underline;
+}
+
+.wp-block-latest-comments__comment {
+    font-size: inherit;
+}
+
+.wp-block-latest-comments__comment-date {
+    margin-top: 0.4em;
+}
+
+.wp-block-latest-comments__comment-excerpt p {
+    font-size: 0.7em;
+    margin: 0.9rem 0 2rem 0;
+}
