--- a/assets/css/Law.css
+++ b/assets/css/Law.css
@@ -176,3 +176,16 @@ a.btn.btn-primary:visited {
     font-size: 0.7em;
     margin: 0.9rem 0 2rem 0;
 }
+
+.law-search-form {
+    margin-top: 10px;
+}
+.law-search-form .form-control {
+    height: 33px;
+    font-style: 14px;
+}
+.law-search-form .btn {
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
+    padding: 4px 12px;
+}
